WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42008
TreeWalker::previousSibling calls firstChild instead of lastChild when handling FILTER_SKIP
https://bugs.webkit.org/show_bug.cgi?id=42008
Summary
TreeWalker::previousSibling calls firstChild instead of lastChild when handli...
Craig Topper
Reported
2010-07-09 17:29:23 PDT
Need to start at the end of the children instead of the beginning. nextSibling correctly calls firstChild.
Attachments
Test case
(1.50 KB, text/html)
2010-07-12 21:58 PDT
,
Craig Topper
no flags
Details
Patch
(10.99 KB, patch)
2010-07-14 14:14 PDT
,
Darin Adler
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2010-07-12 14:48:57 PDT
Could you provide a test case?
Darin Adler
Comment 2
2010-07-12 14:53:51 PDT
It does seem obvious from code inspection that this is broken, and replacing firstChild with lastChild should be all it takes to fix it; the test case is going to be the hardest part.
Craig Topper
Comment 3
2010-07-12 21:58:12 PDT
Created
attachment 61324
[details]
Test case
Darin Adler
Comment 4
2010-07-14 14:14:46 PDT
Created
attachment 61563
[details]
Patch
Darin Adler
Comment 5
2010-07-14 15:49:57 PDT
Committed
r63365
: <
http://trac.webkit.org/changeset/63365
>
Lucas Forschler
Comment 6
2019-02-06 09:02:35 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug