2010-07-14  Darin Adler  <darin@apple.com>

Reviewed by Sam Weinig.

        TreeWalker::previousSibling calls firstChild instead of lastChild when handling FILTER_SKIP
        https://bugs.webkit.org/show_bug.cgi?id=42008

        TreeWalker::previousNode does not handle FILTER_REJECT when processing lastChild
        https://bugs.webkit.org/show_bug.cgi?id=42010

        Tests: fast/dom/TreeWalker/previousNodeLastChildReject.html
               fast/dom/TreeWalker/previousSiblingLastChildSkip.html

        * dom/TreeWalker.cpp:
        (WebCore::TreeWalker::previousSibling): Call lastChild instead of firstChild.
        (WebCore::TreeWalker::previousNode): Fix handling of FILTER_REJECT by exiting
        the lastChild loop when we encounter it.
2010-07-14  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        TreeWalker::previousSibling calls firstChild instead of lastChild when handling FILTER_SKIP
        https://bugs.webkit.org/show_bug.cgi?id=42008

        TreeWalker::previousNode does not handle FILTER_REJECT when processing lastChild
        https://bugs.webkit.org/show_bug.cgi?id=42010

        * fast/dom/TreeWalker/previousNodeLastChildReject-expected.txt: Added.
        * fast/dom/TreeWalker/previousNodeLastChildReject.html: Added.
        * fast/dom/TreeWalker/previousSiblingLastChildSkip-expected.txt: Added.
        * fast/dom/TreeWalker/previousSiblingLastChildSkip.html: Added.
        * fast/dom/TreeWalker/script-tests: Added.
        * fast/dom/TreeWalker/script-tests/TEMPLATE.html: Copied from LayoutTests/fast/dom/Element/script-tests/TEMPLATE.html.
        * fast/dom/TreeWalker/script-tests/previousNodeLastChildReject.js: Added.
        * fast/dom/TreeWalker/script-tests/previousSiblingLastChildSkip.js: Added.


Canonical link: https://commits.webkit.org/54214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63365 268f45cc-cd09-0410-ab3c-d52691b4dbfc