WebCore/dom/TreeWalker.cpp
@@ -151,8 +151,8 @@ Node* TreeWalker::previousSibling(ScriptState* state)
                     m_current = sibling.release();
                     return m_current.get();
                 case NodeFilter::FILTER_SKIP:
-                    if (sibling->firstChild()) {
-                        sibling = sibling->firstChild();
+                    if (sibling->lastChild()) {
+                        sibling = sibling->lastChild();
                         continue;
                     }
                     break;
@@ -224,8 +224,8 @@ Node* TreeWalker::previousNode(ScriptState* state)
                 acceptNodeResult = acceptNode(state, node.get());
                 if (state && state->hadException())
                     return 0;
-                if (acceptNodeResult == NodeFilter::FILTER_ACCEPT)
-                    continue;
+                if (acceptNodeResult == NodeFilter::FILTER_REJECT)
+                    break;
             }
             if (acceptNodeResult == NodeFilter::FILTER_ACCEPT) {
                 m_current = node.release();
